# HEAPML

./: Pipfile  README.md  gbdt.ipynb  knn.ipynb  pyproject.toml  rf.ipynb  rf_tuning.py  svm.ipynb
data/: clean_miracle_senkov_data.xlsx  combined.xlsx  data.csv  featurized_alloys.csv  final_combined.csv  final_combined.xlsx
