[tool.poetry]
name = "heapml"
version = "1.0.0"
description = "Final year BEng project that aims to predict phase formations of high entropy alloys using ML models"
authors = ["sarmigan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
scikit-optimize = "^0.9.0"
matminer = "^0.8.0"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
ipywidgets = "^8.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
